# Darwin

./: CMakeLists.txt  Chromosome.cpp  GA.cpp  README  \  build.sh  test.sh
binGA/: BinChromosome.cpp  BinChromosome.h  BinGA.cpp  BinGA.h  CMakeLists.txt  Chromosome.cpp  Chromosome.h  GA.cpp  GA.h  build.sh  cec17_test_func.cpp  functs.sh  main.cpp  test.cpp  test.txt
binGA/results/: binf1.csv  binf10.csv  binf11.csv  binf12.csv  binf13.csv  binf14.csv  binf15.csv  binf16.csv  binf17.csv  binf18.csv  binf19.csv  binf20.csv  binf21.csv  binf22.csv  binf23.csv  binf24.csv  binf25.csv  binf26.csv  binf27.csv  binf28.csv  binf29.csv  binf3.csv  binf30.csv  binf4.csv  binf5.csv  binf6.csv  binf7.csv  binf8.csv  binf9.csv
binGA/results/gm16/: binf1.csv  binf10.csv  binf11.csv  binf12.csv  binf13.csv  binf14.csv  binf15.csv  binf16.csv  binf17.csv  binf18.csv  binf19.csv  binf20.csv  binf21.csv  binf22.csv  binf23.csv  binf24.csv  binf25.csv  binf26.csv  binf27.csv  binf28.csv  binf29.csv  binf3.csv  binf30.csv  binf4.csv  binf5.csv  binf6.csv  binf7.csv  binf8.csv  binf9.csv
binGA/results/gmem16/: binf1.csv  binf10.csv  binf11.csv  binf12.csv  binf13.csv  binf14.csv  binf15.csv  binf16.csv  binf17.csv  binf18.csv  binf19.csv  binf20.csv  binf21.csv  binf22.csv  binf23.csv  binf24.csv  binf25.csv  binf26.csv  binf27.csv  binf28.csv  binf29.csv  binf3.csv  binf30.csv  binf4.csv  binf5.csv  binf6.csv  binf7.csv  binf8.csv  binf9.csv
binGA/results/gmem2_16/: binf1.csv  binf10.csv  binf3.csv  binf4.csv  binf5.csv  binf6.csv  binf7.csv  binf8.csv  binf9.csv
binGA/results/mute3/: binf1.csv  binf10.csv  binf11.csv  binf12.csv  binf13.csv  binf14.csv  binf15.csv  binf16.csv  binf17.csv  binf18.csv  binf19.csv  binf20.csv  binf21.csv  binf22.csv  binf23.csv  binf24.csv  binf25.csv  binf26.csv  binf27.csv  binf28.csv  binf29.csv  binf3.csv  binf30.csv  binf4.csv  binf5.csv  binf6.csv  binf7.csv  binf8.csv  binf9.csv
binGA/results/mute8/: binf1.csv  binf10.csv  binf11.csv  binf12.csv  binf13.csv  binf14.csv  binf15.csv  binf16.csv  binf17.csv  binf18.csv  binf19.csv  binf20.csv  binf21.csv  binf22.csv  binf23.csv  binf24.csv  binf25.csv  binf26.csv  binf27.csv  binf28.csv  binf29.csv  binf3.csv  binf30.csv  binf4.csv  binf5.csv  binf6.csv  binf7.csv  binf8.csv  binf9.csv
binGA/results/pyscripts/: .~lock.pls.csv#  binData.py  binvbin.py  pls.csv
cec14-c-code/: CMakeLists.txt  build.sh  main.cpp
cmake/: FindJSON.cmake
hybridGA/: BinChromosome.cpp  BinChromosome.h  BinGA.cpp  BinGA.h  CMakeLists.txt  RealChromosome.cpp  RealChromosome.h  RealGA.cpp  RealGA.h  a.out  build.sh  cec17_test_func.cpp  functs.sh  main.cpp  test.cpp
hybridGA/results/: hybf1.csv  realf1.csv  realf10.csv  realf11.csv  realf13.csv  realf14.csv  realf15.csv  realf20.csv  realf21.csv  realf23.csv  realf24.csv  realf3.csv  realf6.csv
hybridGA/results/final/: hybf1.csv  hybf10.csv  hybf11.csv  hybf12.csv  hybf13.csv  hybf14.csv  hybf15.csv  hybf16.csv  hybf17.csv  hybf18.csv  hybf19.csv  hybf20.csv  hybf21.csv  hybf22.csv  hybf23.csv  hybf24.csv  hybf25.csv  hybf26.csv  hybf27.csv  hybf28.csv  hybf29.csv  hybf3.csv  hybf30.csv  hybf4.csv  hybf5.csv  hybf6.csv  hybf7.csv  hybf8.csv  hybf9.csv
hybridGA/results/gbin16greal1/: hybf1.csv  hybf10.csv  hybf11.csv  hybf12.csv  hybf13.csv  hybf14.csv  hybf15.csv  hybf16.csv  hybf17.csv  hybf18.csv  hybf19.csv  hybf20.csv  hybf21.csv  hybf22.csv  hybf23.csv  hybf24.csv  hybf25.csv  hybf26.csv  hybf27.csv  hybf28.csv  hybf29.csv  hybf3.csv  hybf30.csv  hybf4.csv  hybf5.csv  hybf6.csv  hybf7.csv  hybf8.csv  hybf9.csv
hybridGA/results/lbin16greal1/: hybf1.csv  hybf10.csv  hybf11.csv  hybf12.csv  hybf13.csv  hybf14.csv  hybf15.csv  hybf16.csv  hybf17.csv  hybf18.csv  hybf19.csv  hybf20.csv  hybf21.csv  hybf22.csv  hybf23.csv  hybf24.csv  hybf25.csv  hybf26.csv  hybf27.csv  hybf28.csv  hybf29.csv  hybf3.csv  hybf30.csv  hybf4.csv  hybf5.csv  hybf6.csv  hybf7.csv  hybf8.csv  hybf9.csv
pyscripts/: binvreal.py  clean.py  data.py  hvh.py
realGA/: CMakeLists.txt  Chromosome.cpp  Chromosome.h  GA.cpp  GA.h  RealChromosome.cpp  RealChromosome.h  RealGA.cpp  build.sh  cec14_test_func.cpp  cec17_test_func.cpp  main.cpp  test_dyn.cpp
realGA/results/: realf1.csv  realf12.csv  realf16.csv  realf17.csv  realf18.csv  realf19.csv  realf22.csv  realf25.csv  realf26.csv  realf27.csv  realf28.csv  realf29.csv  realf3.csv  realf30.csv  realf4.csv  realf5.csv  realf7.csv  realf8.csv  realf9.csv
